--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="iconos/android-chrome-512x512.png">
     <!-- Manifesto para PWA -->
     <link rel="manifest" href="manifest.json">
+    <!--BOOBSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
@@ -82,7 +84,7 @@
             Accesibilidad: Mejora la accesibilidad al permitir a las tecnologías asistivas (como lectores de pantalla) saltar directamente al contenido principal de la página, ignorando elementos repetitivos como menús de navegación y encabezados.-->
                     <div class="product">
                         <img src="assets/vestido.webp" alt="Producto 1"/>
-                        <h2>Producto 1</h2>
+                        <h2>Vestido de noche</h2>
                         <p class="price">$29.99</p>
                         <a href="#" class="btn">Agregar al carrito</a>
                     </div>
@@ -148,4 +150,8 @@
 </body>
 
 <script src="main.js"></script>
+<!--script boobstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </html>
