--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <!-- Logo -->
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../iconos/logo.webp" alt="Logo de la Marca" height="50">
+                    <img src="/iconos/logo.webp" alt="Logo de la Marca" height="50">
                 </a>
 
                 <!-- Botón para el menú móvil -->
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/mujer.html">Mujer</a>
+                            <a class="nav-link" href="html/mujer.html">Mujer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/html/hombre.html">Hombre</a>
@@ -67,7 +67,7 @@
         </nav>
 
      </header>
-     
+
      <!--Fin de barra de navegacion--------------------------------------------------------------------->
 
 
