--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <!-- Logo -->
                 <a class="navbar-brand" href="../index.html">
-                    <img src="/iconos/logo.webp" alt="Logo de la Marca" height="50">
+                    <img src="iconos/logo.webp" alt="Logo de la Marca" height="50">
                 </a>
 
                 <!-- Botón para el menú móvil -->
@@ -53,13 +53,13 @@
                             <a class="nav-link" href="html/mujer.html">Mujer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/hombre.html">Hombre</a>
+                            <a class="nav-link" href="html/hombre.html">Hombre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/carrito.html">Carrito</a>
+                            <a class="nav-link" href="html/carrito.html">Carrito</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/html/registrarse.html" >Registrarse</a>
+                            <a class="nav-link" href="html/registrarse.html" >Registrarse</a>
                         </li>
                     </ul>
                 </div>
