--- a/html/registrarse.html
+++ b/html/registrarse.html
@@ -77,7 +77,7 @@
 
 
 
-         <div class="content" style="background-color: #d3d3d3;">
+         <div class="content" style="background-color: #f9f9f9;">
              
              <!--REGISTRO------------------------------------------------------------------------------------>
  
