--- a/html/carrito.html
+++ b/html/carrito.html
@@ -111,7 +111,7 @@
                     <label for="quantity">Cantidad:</label>
                     <input type="number" id="quantity" value="1" min="1" />
                 </div>
-                <button class="comprar-btn">Comprar</button>
+                <a class="comprar-btn" href="comprar.html">Comprar</a>
             </div>
         </div>
     </div>
