copia de respaldo antes de cmabiar los html

--- a/html/mujer.html
+++ b/html/mujer.html
@@ -55,7 +55,10 @@
                             <a class="nav-link" href="hombre.html">Hombre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="carrito.html">Carrito</a>
+                            <div id="cart-link">
+                                <a class="nav-link" href="carrito.html">Carrito</a>
+                                <div id="cart-notification"></div> <!-- Puntito de notificación -->
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="registrarse.html" >Registrarse</a>
@@ -104,41 +107,41 @@
                  <img src="../assets/conjuntos/gfh.jpg" alt="Producto 1"/>
                  <h2>Producto 1</h2>
                  <p class="price">$29.99</p>
-                 <a href="#" class="btn">Agregar al carrito</a>
+                 <a href="#" class="btn">Ver</a>
              </div>
 
              <div class="product">
                  <img src="../assets/conjuntos/juyj.jpg" alt="Producto 2"/>
                  <h2>Producto 2</h2>
                  <p class="price">$39.99</p>
-                 <a href="#" class="btn">Agregar al carrito</a>
+                 <a href="#" class="btn">Ver</a>
              </div>
 
              <div class="product">
                  <img src="../assets/conjuntos/descarga.jpg" alt="Producto 3">
                  <h2>Producto 3</h2>
                  <p class="price">$39.99</p>
-                 <a href="#" class="btn">Agregar al carrito</a>
+                 <a href="#" class="btn">Ver</a>
              </div>
 
              <div class="product">
                 <img src="../assets/conjuntos/dws.jpg" alt="Producto 4">
                 <h2>Producto 4</h2>
                 <p class="price">$39.99</p>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <a href="#" class="btn">Ver</a>
             </div>
 
             <div class="product">
                 <img src="../assets/conjuntos/fre.jpg" alt="Producto 5">
                 <h2>Producto 5</h2>
                 <p class="price">$39.99</p>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <a href="#" class="btn">Ver</a>
             </div>
             <div class="product">
                 <img src="../assets/conjuntos/deaf.jpg" alt="Producto 6">
                 <h2>Producto 6</h2>
                 <p class="price">$39.99</p>
-                <a href="#" class="btn">Agregar al carrito</a>
+                <a href="#" class="btn">Ver</a>
             </div>
 
 
@@ -197,7 +200,7 @@
     
 </body>
 
-<script src="main.js"></script>
+<script src="../main.js"></script>
 <!--script boobstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
