--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                                 <a class="nav-link" href="html/hombre.html">Hombre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/carrito.html">Carrito</a>
+                                <div id="cart-link">
+                                    <a class="nav-link" href="html/carrito.html">Carrito</a>
+                                    <div id="cart-notification"></div> <!-- Puntito de notificación -->
+                                </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="html/registrarse.html" >Registrarse</a>
@@ -102,20 +105,20 @@
                             <img src="assets/vestido.webp" alt="Producto 1"/>
                             <h2>Vestido de noche</h2>
                             <p class="price">$29.99</p>
-                            <a href="#" class="btn">Agregar al carrito</a>
+                            <a href="html/carrito.html" class="btn">Ver</a>
                          </div>
 
                          <div class="product">
                             <img src="assets/pantalon.webp" alt="Producto 2"/>
                             <h2>Producto 2</h2>
                             <p class="price">$39.99</p>
-                            <a href="#" class="btn">Agregar al carrito</a>
+                            <a href="html/carrito.html" class="btn">Ver</a>
                          </div>
                          <div class="product">
                             <img src="assets/remera.webp" alt="Producto 2"/>
                             <h2>Producto 2</h2>
                             <p class="price">$39.99</p>
-                            <a href="#" class="btn">Agregar al carrito</a>
+                            <a href="html/carrito.html" class="btn">Ver</a>
                          </div>
         
                     </main>
