--- a/html/carrito.html
+++ b/html/carrito.html
@@ -54,7 +54,10 @@
                             <a class="nav-link" href="hombre.html">Hombre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="carrito.html">Carrito</a>
+                            <div id="cart-link">
+                                <a class="nav-link" href="carrito.html">Carrito</a>
+                                <div id="cart-notification"></div> <!-- Puntito de notificación -->
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="registrarse.html" >Registrarse</a>
@@ -181,7 +184,7 @@
     
 
 </body>
-<script src="main.js"></script>
+<script src="../main.js"></script>
 <!--script boobstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
