--- a/html/comprar.html
+++ b/html/comprar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DarkBand</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Vincular el CSS -->
+    <link rel="stylesheet" href="../css/styles.css"> <!-- Vincular el CSS -->
 
     <!--icono de identificacion del sitio-->
     <link rel="icon" href="iconos/favicon.ico" type="image/x-icon"> 
@@ -38,7 +38,7 @@
 
                     <!-- Logo -->
                     <a class="navbar-brand" href="../index.html">
-                        <img src="iconos/logo.webp" alt="Logo de la Marca" height="50">
+                        <img src="../iconos/logo.webp" alt="Logo de la Marca" height="50">
                     </a>
 
                     <!-- Botón para el menú móvil -->
@@ -50,19 +50,19 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/mujer.html">Mujer</a>
+                                <a class="nav-link" href="mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/hombre.html">Hombre</a>
+                                <a class="nav-link" href="hombre.html">Hombre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/carrito.html">Carrito</a>
+                                <a class="nav-link" href="carrito.html">Carrito</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="html/registrarse.html" >Registrarse</a>
+                                <a class="nav-link" href="registrarse.html" >Registrarse</a>
                             </li>
                         </ul>
                     </div>
