--- a/html/hombre.html
+++ b/html/hombre.html
@@ -55,7 +55,10 @@
                             <a class="nav-link" href="hombre.html">Hombre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="carrito.html">Carrito</a>
+                            <div id="cart-link">
+                                <a class="nav-link" href="carrito.html">Carrito</a>
+                                <div id="cart-notification"></div> <!-- Puntito de notificación -->
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="registrarse.html" >Registrarse</a>
@@ -98,21 +101,21 @@
                     <img src="../assets/conjuntos/thg.jpg" alt="Producto 1"/>
                     <h2>Producto 1</h2>
                     <p class="price">$29.99</p>
-                    <a href="#" class="btn">Agregar al carrito</a>
+                    <a href="#" class="btn">Ver</a>
                 </div>
    
                 <div class="product">
                     <img src="../assets/conjuntos/tgtr.jpg" alt="Producto 2"/>
                     <h2>Producto 2</h2>
                     <p class="price">$39.99</p>
-                    <a href="#" class="btn">Agregar al carrito</a>
+                    <a href="#" class="btn">Ver</a>
                 </div>
    
                 <div class="product">
                     <img src="../assets/classic-dad-hat-white-front-661eddaec2bf4.jpg" alt="Producto 2">
                     <h2>Producto 2</h2>
                     <p class="price">$39.99</p>
-                    <a href="#" class="btn">Agregar al carrito</a>
+                    <a href="#" class="btn">Ver</a>
                 </div>
    
             </main>
@@ -142,7 +145,7 @@
        
        
 </body>
-<script src="main.js"></script>
+<script src="../main.js"></script>
 <!--script boobstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
