el carrito definitivo

--- a/html/mujer.html
+++ b/html/mujer.html
@@ -89,7 +89,7 @@
             <li><a href="#">Accesorios</a></li>
         </ul>
     </nav>
-    <div class="hr"><hr></div>
+    <hr>
     <!--fin de las categorias--------------------------------------------------------------->
 
 
@@ -107,41 +107,41 @@
                  <img src="../assets/conjuntos/gfh.jpg" alt="Producto 1"/>
                  <h2>Producto 1</h2>
                  <p class="price">$29.99</p>
-                 <a href="#" class="btn">Ver</a>
+                 <a href="verproducto.html" class="btn">Ver</a>
              </div>
 
              <div class="product">
                  <img src="../assets/conjuntos/juyj.jpg" alt="Producto 2"/>
                  <h2>Producto 2</h2>
                  <p class="price">$39.99</p>
-                 <a href="#" class="btn">Ver</a>
+                 <a href="verproducto.html" class="btn">Ver</a>
              </div>
 
              <div class="product">
                  <img src="../assets/conjuntos/descarga.jpg" alt="Producto 3">
                  <h2>Producto 3</h2>
                  <p class="price">$39.99</p>
-                 <a href="#" class="btn">Ver</a>
+                 <a href="verproducto.html" class="btn">Ver</a>
              </div>
 
              <div class="product">
                 <img src="../assets/conjuntos/dws.jpg" alt="Producto 4">
                 <h2>Producto 4</h2>
                 <p class="price">$39.99</p>
-                <a href="#" class="btn">Ver</a>
+                <a href="verproducto.html" class="btn">Ver</a>
             </div>
 
             <div class="product">
                 <img src="../assets/conjuntos/fre.jpg" alt="Producto 5">
                 <h2>Producto 5</h2>
                 <p class="price">$39.99</p>
-                <a href="#" class="btn">Ver</a>
+                <a href="verproducto.html" class="btn">Ver</a>
             </div>
             <div class="product">
                 <img src="../assets/conjuntos/deaf.jpg" alt="Producto 6">
                 <h2>Producto 6</h2>
                 <p class="price">$39.99</p>
-                <a href="#" class="btn">Ver</a>
+                <a href="verproducto.html" class="btn">Ver</a>
             </div>
 
 
