--- a/index.html
+++ b/index.html
@@ -105,20 +105,20 @@
                             <img src="assets/vestido.webp" alt="Producto 1"/>
                             <h2>Vestido de noche</h2>
                             <p class="price">$29.99</p>
-                            <a href="html/carrito.html" class="btn">Ver</a>
+                            <a href="html/verproducto.html" class="btn">Ver</a>
                          </div>
 
                          <div class="product">
                             <img src="assets/pantalon.webp" alt="Producto 2"/>
                             <h2>Producto 2</h2>
                             <p class="price">$39.99</p>
-                            <a href="html/carrito.html" class="btn">Ver</a>
+                            <a href="html/verproducto.html" class="btn">Ver</a>
                          </div>
                          <div class="product">
                             <img src="assets/remera.webp" alt="Producto 2"/>
                             <h2>Producto 2</h2>
                             <p class="price">$39.99</p>
-                            <a href="html/carrito.html" class="btn">Ver</a>
+                            <a href="html/verproducto.html" class="btn">Ver</a>
                          </div>
         
                     </main>
