--- a/html/hombre.html
+++ b/html/hombre.html
@@ -84,7 +84,7 @@
             <li><a href="#">Accesorios</a></li>
         </ul>
     </nav>
-    <div class="hr"><hr></div>
+    <hr>
     <!--fin de las categorias--------------------------------------------------------------->
 
 
@@ -101,21 +101,21 @@
                     <img src="../assets/conjuntos/thg.jpg" alt="Producto 1"/>
                     <h2>Producto 1</h2>
                     <p class="price">$29.99</p>
-                    <a href="#" class="btn">Ver</a>
+                    <a href="verproducto.html" class="btn">Ver</a>
                 </div>
    
                 <div class="product">
                     <img src="../assets/conjuntos/tgtr.jpg" alt="Producto 2"/>
                     <h2>Producto 2</h2>
                     <p class="price">$39.99</p>
-                    <a href="#" class="btn">Ver</a>
+                    <a href="verproducto.html" class="btn">Ver</a>
                 </div>
    
                 <div class="product">
                     <img src="../assets/classic-dad-hat-white-front-661eddaec2bf4.jpg" alt="Producto 2">
                     <h2>Producto 2</h2>
                     <p class="price">$39.99</p>
-                    <a href="#" class="btn">Ver</a>
+                    <a href="verproducto.html" class="btn">Ver</a>
                 </div>
    
             </main>
