--- a/html/verproducto.html
+++ b/html/verproducto.html
@@ -71,7 +71,7 @@
     <!--Fin de barra de navegacion--------------------------------------------------------------------->
    
     
-     <!--CARRITO------------------------------------------------------------------------------->
+     <!--VER PRODUCTO------------------------------------------------------------------------------->
 
      <div class="containercar">
         <div class="boxcar">
@@ -120,8 +120,19 @@
     </div>
     
 
-<!--FIN DEL CARRITO--------------------------------------------------------------------------->
+<!--FIN DE VER EL PRODUCTO--------------------------------------------------------------------------->
 
+
+
+<!-- Ventana emergente (modal) -->
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close-button" id="close-button">&times;</span>
+        <p>Has agregado un producto al carrito</p>
+        <button id="go-to-cart" class="btnmodal">Ir al carrito</button>
+        <button id="continue-shopping" class="btnmodal">Seguir comprando</button>
+    </div>
+</div>
 
 
 
