responsive del carrito

--- a/html/mujer.html
+++ b/html/mujer.html
@@ -89,7 +89,7 @@
             <li><a href="#">Accesorios</a></li>
         </ul>
     </nav>
-    <hr>
+    <div class="linea"> <hr> </div> 
     <!--fin de las categorias--------------------------------------------------------------->
 
 
