--- a/html/hombre.html
+++ b/html/hombre.html
@@ -84,7 +84,7 @@
             <li><a href="#">Accesorios</a></li>
         </ul>
     </nav>
-    <hr>
+    <div class="linea"> <hr> </div> 
     <!--fin de las categorias--------------------------------------------------------------->
 
 
