--- a/html/mujer.html
+++ b/html/mujer.html
@@ -154,17 +154,26 @@
 
 
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    
     <div class="carousel-inner">
+
       <div class="carousel-item active">
         <img src="../assets/17.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption">Texto para la imagen 1</div>
       </div>
+
       <div class="carousel-item">
         <img src="../assets/f2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">Texto para la imagen 2</div>
       </div>
+
       <div class="carousel-item">
         <img src="../assets/M2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption">Texto para la imagen 3 </div>
       </div>
+
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
