--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="darkband, dark band, tienda de ropa, ropa femenina, remeras, tops, buzos, remera, top, buzo, campera">
+    <meta name="description" content="tienda de ropa mixta">
+    <meta name="autor" content="marcossavid">
+    <meta name="geo.placement" content="cordoba-argentina">
     <title>DarkBand</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- Vincular el CSS -->
 
@@ -84,8 +88,9 @@
              <!--BANNER DE ENCABEZADO------------------------------------------------------------------------------->
     
              <div class="banner"> 
-                <h1 class="animate__animated animate__backInLeft" >Darkband</h1>
-                <p class="animate__animated animate__backInRight">Black vibes</p>
+                <h1 class="animate__animated animate__backInLeft" >Darkband
+                </h1>
+                <p class="animate__animated animate__backInRight">Black vibesss</p>
                </div>
                
              <!--fin del banner--------------------------------------------------------------------------------->
