--- a/html/mujer.html
+++ b/html/mujer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Band</title>
+    <title>Catalogo de mujer</title>
     <link rel="stylesheet" href="../css/styles.css"> <!-- Vincular el CSS -->
 
     <!--icono de identificacion del sitio-->
