--- a/html/hombre.html
+++ b/html/hombre.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Band</title>
+    <meta name="keywords" content="catalogo darkband, dark band, tienda de ropa, ropa masculina, remeras, buzos, remera, buzo, campera">
+    <meta name="description" content="Mira el catalgo de ropa de hombre de darkband">
+
+    <title>Catalogo de hombre</title>
     <link rel="stylesheet" href="../css/styles.css"> <!-- Vincular el CSS -->
 
     <!--icono de identificacion del sitio-->
