--- a/html/mujer.html
+++ b/html/mujer.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="catalogo darkband, dark band, tienda de ropa, ropa femenina, remeras, tops, buzos, remera, top, buzo, campera">
+    <meta name="description" content="Mira el catalgo de ropa de mujer de darkband">
     <title>Catalogo de mujer</title>
     <link rel="stylesheet" href="../css/styles.css"> <!-- Vincular el CSS -->
 
