--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="description" content="tienda de ropa mixta">
     <meta name="autor" content="marcossavid">
     <meta name="geo.placement" content="cordoba-argentina">
+    <meta http-equiv="Content-Language" content="es-AR">
+
     <title>DarkBand</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Vincular el CSS -->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Vincular el CSS k-->
 
     <!--icono de identificacion del sitio-->
     <link rel="icon" href="iconos/favicon.ico" type="image/x-icon"> 
