--- a/html/carrito.html
+++ b/html/carrito.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DarkBand</title>
+    <meta name="keywords" content="carrito de darkband, carrito, carrito de dark band, darkband carrito, dark band carrito">
+    <meta name="description" content="Tu carrito de compras en darkband">
+
+    <title>Carrito</title>
     <link rel="stylesheet" href="../css/styles.css"> <!-- Vincular el CSS -->
 
     <!--icono de identificacion del sitio-->
