--- a/html/registrarse.html
+++ b/html/registrarse.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="darkband, dark band, darkband resgisro, registrarse en darkband, dark band registro, registrarse en dark band">
     <meta name="description" content="Crea tu cuenta en DarkBand y disfruta de descuentos exclusivos en ropa de moda. Regístrate ahora y recibe las últimas novedades">
     <title>Registrarse</title>
     <link rel="stylesheet" href="../css/styles.css"> <!-- Vincular el CSS -->
