--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Language" content="es-AR">
 
     <title>DarkBand</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Vincular el CSS k-->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Vincular el CSS -->
 
     <!--icono de identificacion del sitio-->
     <link rel="icon" href="iconos/favicon.ico" type="image/x-icon"> 
@@ -92,7 +92,7 @@
              <div class="banner"> 
                 <h1 class="animate__animated animate__backInLeft" >Darkband
                 </h1>
-                <p class="animate__animated animate__backInRight">Black vibesss</p>
+                <p class="animate__animated animate__backInRight">Black vibes</p>
                </div>
                
              <!--fin del banner--------------------------------------------------------------------------------->
